<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.y2m.bloodsugartwo.AddNewRowActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_data"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="anyRtl"
                android:layout_gravity="center_vertical"
                android:inputType="number"
                android:gravity="center_vertical|right"
                android:theme="@style/MyEditTextTheme"
                android:hint="@string/value"
                android:id="@+id/value"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="anyRtl"
                android:layout_gravity="center_vertical"
                android:inputType="text"
                android:gravity="center_vertical|right"
                android:theme="@style/MyEditTextTheme"
                android:hint="@string/type"
                android:focusable="false"
                android:id="@+id/type"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="anyRtl"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|right"
                android:theme="@style/MyEditTextTheme"
                android:hint="@string/time"
                android:id="@+id/time"
                android:focusable="false"
                android:inputType="time"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="anyRtl"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|right"
                android:theme="@style/MyEditTextTheme"
                android:hint="@string/date"
                android:id="@+id/date"
                android:focusable="false"
                android:inputType="datetime"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            android:layout_marginTop="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@drawable/shape_savebtnbackground"
            android:gravity="center_horizontal|center_vertical|center"
            android:text="@string/save"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
