<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".AverageActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_data"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textDirection="anyRtl"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical|right"
                    android:theme="@style/MyEditTextTheme"
                    android:hint="@string/averages_form"
                    android:id="@+id/from"
                    android:focusable="false"
                    android:inputType="date"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textDirection="anyRtl"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical|right"
                    android:theme="@style/MyEditTextTheme"
                    android:hint="@string/averages_to"
                    android:id="@+id/to"
                    android:focusable="false"
                    android:inputType="date"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/calculate"
                android:layout_marginTop="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/shape_savebtnbackground"
                android:gravity="center_horizontal|center_vertical|center"
                android:text="@string/calculate"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/type1"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/type2"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/type3"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
