<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/content_frame"
        android:layout_height="match_parent" >
        <include
            layout="@layout/content_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="@dimen/menu_width"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/right_menu"
            android:layout_alignParentRight="true">
            <RelativeLayout
                android:layout_width="@dimen/menu_width"
                android:layout_height="@dimen/menu_top_hight"
                android:background="#5b0a71"
                android:id="@+id/top_section"
                android:padding="10dp"
                android:layout_alignParentTop="true">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/app_icon"
                    android:scaleType="fitCenter"
                    android:id="@+id/nav_icon"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_above="@+id/nav_title"
                    android:layout_alignParentTop="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_title"
                    android:id="@+id/nav_title"
                    android:layout_margin="8dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:layout_alignParentBottom="true"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
            <ScrollView
                android:layout_width="@dimen/menu_width"
                android:background="#e1a6f1"
                android:layout_below="@+id/top_section"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="@dimen/menu_width"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/menu_item1"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="13.25dp"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:id="@+id/image1"
                            android:src="@drawable/invet"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/menuInventFreind"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:textColor="#000"
                            android:layout_marginRight="43.25dp"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:id="@+id/text1"
                            />
                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#fff"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/menu_item2"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="13.25dp"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:id="@+id/image2"
                            android:src="@drawable/notfiy"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/menuNotification"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:textColor="#000"
                            android:layout_marginRight="43.25dp"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:id="@+id/text2"
                            />
                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#fff"/>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/menu_item3"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="13.25dp"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:id="@+id/image3"
                            android:src="@drawable/rate_icon"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/menuRateApplication"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:textColor="#000"
                            android:layout_marginRight="43.25dp"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:id="@+id/text3"
                            />
                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#fff"/>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/menu_item4"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="13.25dp"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:id="@+id/image4"
                            android:src="@drawable/play_icon"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/menuOuerApplication"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:textColor="#000"
                            android:layout_marginRight="43.25dp"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:id="@+id/text4"
                            />
                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#fff"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/menu_item5"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="13.25dp"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:id="@+id/image5"
                            android:src="@drawable/setting_icon"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/menuSetting"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:textColor="#000"
                            android:layout_marginRight="43.25dp"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:id="@+id/text5"
                            />
                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:background="#fff"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/menu_item6"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="13.25dp"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:id="@+id/image6"
                            android:src="@drawable/language"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/languages"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:textColor="#000"
                            android:layout_marginRight="43.25dp"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:id="@+id/text6"
                            />
                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#fff"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/menu_item7"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="13.25dp"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:id="@+id/image7"
                            android:src="@drawable/average"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/averages"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:textColor="#000"
                            android:layout_marginRight="43.25dp"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:id="@+id/text7"
                            />
                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#fff"/>

                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>



